# spark-batch

./: .gitignore  pyspark_basic.ipynb
spark-python/pyspark-dataframe/: pyproject.toml
spark-python/pyspark-dataframe/src/: dataframe.ipynb  dataframe.py  dataframe_aggregation.ipynb  dataframe_missing_data.ipynb  dataframe_operations.ipynb
spark-python/pyspark-datasource/pyspark-ds-delta/: pyproject.toml  pyspark-ds-delta.md
spark-python/pyspark-datasource/pyspark-ds-jdbc/: Readme.md  pyproject.toml  test.json
spark-python/pyspark-datasource/pyspark-ds-text/: setup.cfg
spark-python/pyspark-datasource/pyspark-ds-xml/: pyproject.toml
spark-python/pyspark-prophet/: README.md  pyproject.toml
spark-python/pyspark-prophet/src/: forecasting_growth.ipynb  forecasting_pophet.ipynb  wikipedia_prophet.ipynb
spark-python/pyspark-pyarrow/: README.md  pyproject.toml
spark-python/pyspark-pyarrow/src/: common.py  pandas_udf.ipynb  pandas_udf_spark.py  pyspark_pyarrow.py  pyspark_series_to_series.ipynb  pyspark_udtf.py
spark-python/pyspark-pyarrow/tests/: conftest.py  test_pyarrow_conversion.py  test_spark_app.py
spark-python/pyspark-sql/: pyproject.toml  spark-metastore.md
spark-python/pyspark-storage/pyspark-local-s3/: Readme.md  pyproject.toml  requests.csv
spark-python/pyspark-test/PysparkPytest/: pyproject.toml
spark-python/spark-filter/: README.md  pyproject.toml
spark-python/spark-filter/src/: data_frame.py
spark-python/spark-filter/tests/: conftest.py
spark-sql/: .gitignore  pyproject.toml
spark-sql/spark-sql-ade/: coalescing_post_shuffle_partitions.md  converting_sort_merge_join_broadcast_join.md  converting_sort_merge_join_to_shuffled_hash_join.md  optimizing_skew_join.md  spark-sql-aqe.md  splitting_skewed_shuffle_partitions.md
spark-sql/spark-sql-aggregation/: spark_sql_aggregation.md
spark-sql/spark-sql-aggregation/cube/: spark-aggregation-cube.md
spark-sql/spark-sql-aggregation/group/: collection_by_group.md
spark-sql/spark-sql-aggregation/group_set/: spark-sql-group-set.md
spark-sql/spark-sql-aggregation/pivoting/: pivoting_select_case.md  spark_pivoting.md  unpivoting.md
spark-sql/spark-sql-aggregation/rollup/: spark-aggregation-rollup.md
spark-sql/spark-sql-aggregation/simple/: spark_aggregation_using_agg.md
spark-sql/spark-sql-aggregation/stats/: spark_stats.md
spark-sql/spark-sql-caching/: spark-sql-caching.md
spark-sql/spark-sql-caching/cache/: spark_caching_using_table.md  spark_sql_cache.md
spark-sql/spark-sql-caching/config/: spark_sql_caching_config.md
spark-sql/spark-sql-caching/manager/: SparkSqlCacheManager.scala
spark-sql/spark-sql-catalog/: spark_catalog.md
spark-sql/spark-sql-catalog/database/: spark_hive_database.md
spark-sql/spark-sql-catalog/hivemanaged/: hive_compatible_table.md  hive_managed_table.md
spark-sql/spark-sql-catalog/sparkmanaged/: spark_managed_table.md
spark-sql/spark-sql-catalog/unmanaged/: unmanaged_table.md
spark-sql/spark-sql-catalog/view/: spark-sql-view.md
spark-sql/spark-sql-cli/: spark-sql-cli.md
spark-sql/spark-sql-config/: spark_sql_config.md
spark-sql/spark-sql-cte/: spark-sql-cte.md
spark-sql/spark-sql-datasource/: spark-sql-datasource.md
spark-sql/spark-sql-dependency/: spark-sql-dependency.md
spark-sql/spark-sql-dml/table/: InsertIntoPartitionTable.md  InsertIntoTable.md
spark-sql/spark-sql-filter/: spark_sql_filter.md
spark-sql/spark-sql-framework/parquet/: README.md
spark-sql/spark-sql-function/aggregate_function/: aggregate_array_function.md  aggregate_count_function.md  aggregate_first_function.md  aggregate_function.md  aggregate_group_function.md  aggregate_grouping_function.md  aggregate_list_function.md  aggregate_max_function.md  aggregate_set_function.md  aggregate_statistics_function.md  aggregation_all_rows_check.md
spark-sql/spark-sql-function/generator_function/: generate_json_file.py  generator_function.md
spark-sql/spark-sql-function/hof_function/: README.md  filter_hof.md  transform_hof.md
spark-sql/spark-sql-hive/: SparkHiveSql.scala  spark-sql-hive.md
spark-sql/spark-sql-hive/config/: SqlConfig.scala
spark-sql/spark-sql-hive/context/: HiveContextSql.scala
spark-sql/spark-sql-hive/metastore/: SparkMetastoreCatalog.scala
spark-sql/spark-sql-join/: spark-sql-join.md
spark-sql/spark-sql-join/broacast_hash_join/: broadcast-hash-join.puml  spark-sql-broadcast-join.md
spark-sql/spark-sql-join/cartesian_join/: cartesian-join.md
spark-sql/spark-sql-join/hash_join/: hash_join.md
spark-sql/spark-sql-join/range_join/: interval_overlap_range_join.md  point_in_interval_range_join.md  range-join.md  range_join_hint.md
spark-sql/spark-sql-join/shuffle_hash_join/: shuffle-hash-join.md
spark-sql/spark-sql-join/shuffle_short_merg_join/: shuffle-sort-merge-join.md
spark-sql/spark-sql-join/sort_merge_join/: sort-merge-join.md
spark-sql/spark-sql-join/sql/: spark_join.md
spark-sql/spark-sql-join/strategy/: spark-join-selection-strategy.md
spark-sql/spark-sql-null-handling/: null_handling_aggregate.md  null_handling_epxression.md  null_handling_in_comparision_operation.md  null_handling_in_logical_operator.md  null_in_aggregate_operator.md  null_in_set_operation.md  null_in_sort_order_by_operator.md  null_in_subquery.md  null_in_where_clause.md  spark-sql-null-handling.md
spark-sql/spark-sql-optimization/: spark-sql-optimization.md
spark-sql/spark-sql-optimization/spark-job-optimization/: spark-job-optimization.md
spark-sql/spark-sql-optimization/spark-sql-catalyst/: spark-sql-ast.md  spark-sql-catalyst.md  spark-sql-catalyst.puml  (+3 more)
spark-sql/spark-sql-partition/: rebalanced_hint.md
spark-sql/spark-sql-scd/: spark-sql-scd2.md
spark-sql/spark-sql-stats/: spark-sql-stats.md
spark-sql/spark-sql-subquery/: spark-sql-subquery.md
spark-sql/spark-sql-timeseries/: generate_time_series_data.ipynb  spark-sql-timeseries.md
spark-sql/spark-sql-types/: SparkSql.scala  query_planner.puml
spark-sql/spark-sql-udf/: spark-sql-udf.md  spark-udf-sql.md
spark-sql/spark-sql-window/: setup-tables.md  spark_window_function.md
(+2710 files in other folders)
