[metadata]
name = "pyspark-ds-text"
version = "1.0"
author = "Giorgos Myrianthous"
description = "This is an example project"
long_description = "This is a longer description for the project"
url = "https://medium.com/@gmyrianthous"
keywords = "python, datatype, setuptools"

[options]
python_requires = ">=3.9"
package_dir= "src"
packages="find:"

[options.packages.find]
where=src

[options.extras_require]
test = [pytest, coverage]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [tests]
pythonpath = [src]