[tool.poetry]
name = "pyspark-local-s3"
version = "0.1.0"
description = ""
authors = ["mahfooz_iiitian <mahfooz.iiitian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
